crates/reinhardt-core/macros/tests/ui/model_enum/fail/wrong_literal_type.rs
use reinhardt_macros::ModelEnum;

#[derive(ModelEnum)]
#[model_enum(repr = "string")]
enum WrongLiteralType {
	#[model_enum(value = 1)]
	Queued,
}

fn main() {}
